Update index.html with new styles and features
Changed background color and added functionality for heart animations and music button.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
 
         body {
-            background-color: #000;
+            background-color: #6e6c6c;
             color: snow;
             font-style: italic;
             font-family: "Georgia", "Times New Roman", serif;
@@ -163,4 +163,5 @@
 
 </body>
 </html>
+
 
