--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <!-- 🎵 Música sem autoplay -->
     <audio id="musica" loop>
-        <source src="music/Quando bate aquela saudade.mp3" type="audio/mpeg">
+        <source src="music/Quando_bate_aquela_saudade.mp3" type="audio/mpeg">
     </audio>
 
     <!-- 🔊 Botão para ativar música -->
@@ -128,7 +128,7 @@
             Espero te ver de branco no altar e passar o resto da minha vida ao seu lado.
         </p>
 
-        <img src="img/Ana meu amor.jpeg" alt="Foto da Ana">
+        <img src="img/Ana_meu_amor.jpeg" alt="Foto da Ana">
     </div>
 
     <!-- 💖 Script dos corações -->
@@ -163,5 +163,6 @@
 
 </body>
 </html>
+
 
 
