Fix HTML formatting and update image source

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <!-- 🎵 Música sem autoplay -->
     <audio id="musica" loop>
-        <source src="music/Quando_bate_aquela_saudade.mp3" type="audio/mpeg">
+        <source src="music/quando_bate_aquela_saudade.mp3" type="audio/mpeg">
     </audio>
 
     <!-- 🔊 Botão para ativar música -->
@@ -128,7 +128,7 @@
             Espero te ver de branco no altar e passar o resto da minha vida ao seu lado.
         </p>
 
-        <img src="img/Ana_meu_amor.jpeg" alt="Foto da Ana">
+        <img src="img/aana_meu_amor.jpeg" alt="Foto da Ana">
     </div>
 
     <!-- 💖 Script dos corações -->
@@ -162,7 +162,4 @@
     </script>
 
 </body>
-</html>
-
-
-
+</html>    
